Corrections menu du header et du nom du propriétaire pour la version mobile, ajout d'un fond gris pour l'interieur des collapses et suppression des points des collapses équipements.

--- a/my-react-app/src/styles/Pages/_About.scss
+++ b/my-react-app/src/styles/Pages/_About.scss
@@ -67,7 +67,7 @@
   .about-content {
     height: 90%;
     max-width: 90% !important;
-    padding: 0 15px;
+    padding: 0 0px !important;
     gap: 50px !important; 
   }
 
