--- a/my-react-app/src/styles/Pages/_HousingDetail.scss
+++ b/my-react-app/src/styles/Pages/_HousingDetail.scss
@@ -176,12 +176,11 @@
   .housing-detail-header {
     flex-direction: column;
     align-items: flex-start;
-    padding: 0 20px;
+    padding: 0 0;
     margin-top: -22px;
   }
 
   .housing-info {
-    padding-left: 0;
     text-align: left;
 
     h1 {
@@ -195,7 +194,7 @@
 
   /* ✅ Owner tout à droite et Étoiles tout à gauche */
   .housing-detail-owner {
-    gap: 170px;
+    gap: 104px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -241,8 +240,8 @@
     flex-direction: column;
     gap: 10px;
     width: 100%;
-    max-width: 90%;
-    margin-left: -5px;
+    max-width: 100%;
+    margin-left: -21px;
     margin-right: auto;
     margin-top: -10px;
     margin-bottom: 50px;
