--- a/my-react-app/src/styles/components/_slideshow.scss
+++ b/my-react-app/src/styles/components/_slideshow.scss
@@ -102,7 +102,7 @@
   .slideshow {
     height: 300px !important;
     border-radius: 5px;
-    width: 90% !important; 
+    width: 100% !important; 
     max-width: 500px !important; 
     margin: 0 auto;
     padding-right: 15px;
